--- a/librarian/package.json
+++ b/librarian/package.json
@@ -5,6 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "start": "ts-node index.ts",
+    "metadata": "ts-node metadata.ts",
     "test": "jest"
   },
   "devDependencies": {
