--- a/librarian/package.json
+++ b/librarian/package.json
@@ -19,8 +19,10 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
+    "adm-zip": "^0.5.10",
     "axios": "^1.4.0",
     "dotenv": "^10.0.0",
+    "fast-xml-parser": "^4.2.5",
     "node-isbn": "^1.6.1",
     "readline": "^1.3.0",
     "tesseract.js": "^4.1.1"
