--- a/librarian/package.json
+++ b/librarian/package.json
@@ -20,6 +20,7 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
+    "@cyber2024/pdf-parse-fixed": "^1.2.5",
     "adm-zip": "^0.5.10",
     "axios": "^1.4.0",
     "dotenv": "^10.0.0",
