--- a/librarian/package.json
+++ b/librarian/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^10.0.0",
     "fast-xml-parser": "^4.2.5",
     "node-isbn": "^1.6.1",
+    "pdf-parse": "^1.1.1",
     "readline": "^1.3.0",
     "tesseract.js": "^4.1.1"
   }
