refactor(metadata): to add test coverage

--- a/librarian/sample.env
+++ b/librarian/sample.env
@@ -2,3 +2,4 @@ AUDIOBOOKS_FOLDER=/path/to/audiobooks/folder
 COMICBOOKS_FOLDER=/path/to/comicbooks/folder
 BOOKS_FOLDER=/path/to/books/folder
 GOOGLE_BOOKS_API_KEY=key
+LOG_LEVEL=1
