--- a/librarian/package.json
+++ b/librarian/package.json
@@ -20,12 +20,14 @@
   },
   "dependencies": {
     "@cyber2024/pdf-parse-fixed": "^1.2.5",
+    "@types/ramda": "^0.29.2",
     "adm-zip": "^0.5.10",
     "axios": "^1.4.0",
     "dotenv": "^10.0.0",
     "fast-xml-parser": "^4.2.5",
     "node-isbn": "^1.6.1",
     "pdf-parse": "^1.1.1",
+    "ramda": "^0.29.0",
     "readline": "^1.3.0",
     "tesseract.js": "^4.1.1"
   }
