--- a/librarian/tsconfig.json
+++ b/librarian/tsconfig.json
@@ -3,6 +3,9 @@
     "target": "es2018",
     "module": "commonjs",
     "moduleResolution": "node",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "strict": true,
+    "strictNullChecks": true,
+    "strictFunctionTypes": true
   }
 }
