--- a/librarian/tsconfig.json
+++ b/librarian/tsconfig.json
@@ -6,6 +6,7 @@
     "esModuleInterop": true,
     "strict": true,
     "strictNullChecks": true,
-    "strictFunctionTypes": true
+    "strictFunctionTypes": true,
+    "noImplicitAny": true
   }
 }
